--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>SMARTCARGO-AIPA by May Roga LLC</title>
-<link rel="stylesheet" href="/static/styles.css">
+    <meta charset="UTF-8">
+    <title>SMARTCARGO-AIPA by May Roga LLC</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
 
 <h1>SMARTCARGO-AIPA</h1>
-<p id="disclaimer">
-SMARTCARGO-AIPA by May Roga LLC – Preventive documentary validation system.
-</p>
+<p id="subtitle">Preventive Documentary Validation System</p>
 
 <form id="cargoForm">
-<input name="mawb" placeholder="MAWB" required>
-<select name="cargo_type">
-<option value="GEN">GEN</option>
-<option value="DG">DG</option>
-<option value="PER">PER</option>
-<option value="HUM">HUM</option>
-<option value="VAL">VAL</option>
-</select>
-<input type="number" name="weight" placeholder="Weight (kg)" required>
-<input type="number" name="volume" placeholder="Volume (m³)" required>
+    <input type="text" name="username" placeholder="Username" required>
+    <input type="password" name="password" placeholder="Password" required>
 
-<button type="submit">Validate</button>
-<button type="button" onclick="resetForm()">Reset</button>
-<button type="button" onclick="window.print()">Print / PDF</button>
-<button type="button" onclick="translate()">ES / EN</button>
-<button type="button" onclick="sendWhatsApp()">WhatsApp</button>
+    <input type="text" name="mawb" placeholder="MAWB" required>
+
+    <select name="cargo_type">
+        <option value="GEN">General Cargo</option>
+        <option value="DG">Dangerous Goods</option>
+        <option value="PER">Perishable</option>
+    </select>
+
+    <input type="number" name="weight" placeholder="Weight (kg)" required>
+    <input type="number" name="volume" placeholder="Volume (m3)" required>
+
+    <button type="submit">Validate</button>
+    <button type="button" onclick="window.location.reload()">Reset</button>
+    <button type="button" onclick="window.print()">Print / PDF</button>
 </form>
 
 <pre id="result"></pre>
+
+<p class="legal">
+SMARTCARGO-AIPA by May Roga LLC · Sistema de validación documental preventiva.  
+No sustituye decisiones del operador aéreo.
+</p>
 
 <script src="/static/scripts.js"></script>
 </body>
