--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,37 +6,75 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
+    <header>
+        <h1>SMARTCARGO-AIPA by May Roga LLC</h1>
+        <p>Sistema de validación documental preventiva · No sustituye decisiones del operador aéreo</p>
+    </header>
 
-<h1>SMARTCARGO-AIPA</h1>
-<p id="subtitle">Preventive Documentary Validation System</p>
+    <section id="login-section">
+        <h2>Ingreso seguro</h2>
+        <form id="login-form">
+            <label>Usuario: <input type="text" id="username" required></label>
+            <label>Clave: <input type="password" id="password" required></label>
+            <button type="submit">Ingresar</button>
+        </form>
+        <p id="login-error" class="error"></p>
+    </section>
 
-<form id="cargoForm">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
+    <section id="main-section" class="hidden">
+        <h2>Dashboard operativo y asesor</h2>
 
-    <input type="text" name="mawb" placeholder="MAWB" required>
+        <div id="cargo-form-container">
+            <h3>Registrar / Validar Carga</h3>
+            <form id="cargo-form">
+                <label>MAWB: <input type="text" name="mawb" required></label>
+                <label>HAWB: <input type="text" name="hawb"></label>
+                <label>Origen: <input type="text" name="origin" required></label>
+                <label>Destino: <input type="text" name="destination" required></label>
+                <label>Tipo de carga: 
+                    <select name="cargo_type">
+                        <option value="GEN">General</option>
+                        <option value="DG">Dangerous Goods</option>
+                        <option value="PER">Perishable</option>
+                    </select>
+                </label>
+                <label>Fecha de vuelo: <input type="date" name="flight_date" required></label>
+                <label>Peso (kg/lbs): <input type="number" step="0.01" name="weight" required></label>
+                <label>Volumen (m³): <input type="number" step="0.01" name="volume" required></label>
+                <label>Largo (cm/in): <input type="number" step="0.1" name="length" required></label>
+                <label>Ancho (cm/in): <input type="number" step="0.1" name="width" required></label>
+                <label>Alto (cm/in): <input type="number" step="0.1" name="height" required></label>
 
-    <select name="cargo_type">
-        <option value="GEN">General Cargo</option>
-        <option value="DG">Dangerous Goods</option>
-        <option value="PER">Perishable</option>
-    </select>
+                <label>Documentos (puede subir hasta 2 fotos por tipo): 
+                    <input type="file" name="files" multiple>
+                </label>
 
-    <input type="number" name="weight" placeholder="Weight (kg)" required>
-    <input type="number" name="volume" placeholder="Volume (m3)" required>
+                <label>Rol: 
+                    <select id="role-select">
+                        <option value="owner">Shipper</option>
+                        <option value="forwarder">Forwarder</option>
+                        <option value="driver">Driver</option>
+                        <option value="warehouse">Warehouse</option>
+                        <option value="admin">Administrador</option>
+                    </select>
+                </label>
 
-    <button type="submit">Validate</button>
-    <button type="button" onclick="window.location.reload()">Reset</button>
-    <button type="button" onclick="window.print()">Print / PDF</button>
-</form>
+                <button type="submit">Validar</button>
+                <button type="button" id="reset-btn">Reset</button>
+                <button type="button" id="print-btn">Print/PDF</button>
+                <button type="button" id="whatsapp-btn">WhatsApp</button>
+            </form>
+        </div>
 
-<pre id="result"></pre>
+        <div id="result-section">
+            <h3>Resultados de Validación</h3>
+            <div id="semaphore-display"></div>
+            <div id="documents-status"></div>
+            <div id="advisor-msg"></div>
+            <div id="legal-msg"></div>
+        </div>
+    </section>
 
-<p class="legal">
-SMARTCARGO-AIPA by May Roga LLC · Sistema de validación documental preventiva.  
-No sustituye decisiones del operador aéreo.
-</p>
-
-<script src="/static/scripts.js"></script>
+    <script src="/static/scripts.js"></script>
 </body>
 </html>
