--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,71 +8,57 @@
 <body>
     <header>
         <h1>SMARTCARGO-AIPA by May Roga LLC</h1>
-        <p>Sistema de validación documental preventiva · No sustituye decisiones del operador aéreo</p>
+        <p>Preventive Documentary Validation System · Does not replace airline decisions</p>
     </header>
 
-    <section id="login-section">
-        <h2>Ingreso seguro</h2>
-        <form id="login-form">
-            <label>Usuario: <input type="text" id="username" required></label>
-            <label>Clave: <input type="password" id="password" required></label>
-            <button type="submit">Ingresar</button>
+    <section id="cargo-form">
+        <h2>Register / Validate Cargo</h2>
+        <form id="formCargo">
+            <label>MAWB:<input type="text" name="mawb" required></label>
+            <label>HAWB:<input type="text" name="hawb" required></label>
+            <label>Origin:<input type="text" name="origin" required></label>
+            <label>Destination:<input type="text" name="destination" required></label>
+            <label>Cargo Type:
+                <select name="cargo_type" required>
+                    <option value="General">General</option>
+                    <option value="Dangerous Goods">Dangerous Goods</option>
+                    <option value="Perishable">Perishable</option>
+                </select>
+            </label>
+            <label>Flight Date:<input type="date" name="flight_date" required></label>
+            <label>Weight (kg/lbs):<input type="number" name="weight_kg" required></label>
+            <label>Volume (m³):<input type="number" name="volume" required></label>
+            <label>Length (cm/in):<input type="number" name="length_cm" required></label>
+            <label>Width (cm/in):<input type="number" name="width_cm" required></label>
+            <label>Height (cm/in):<input type="number" name="height_cm" required></label>
+            
+            <label>Upload Documents (max 2 per type):
+                <input type="file" name="documents" multiple accept="image/*">
+            </label>
+
+            <label>Role:
+                <select name="role" required>
+                    <option value="Shipper">Shipper</option>
+                    <option value="Forwarder">Forwarder</option>
+                    <option value="Driver">Driver</option>
+                    <option value="Warehouse">Warehouse</option>
+                    <option value="Operator">Operator</option>
+                </select>
+            </label>
+
+            <button type="submit">Validate</button>
+            <button type="button" id="resetForm">Reset</button>
+            <button type="button" id="printPDF">Print / PDF</button>
+            <button type="button" id="shareWhatsApp">WhatsApp</button>
+            <button type="button" id="translateBtn">Translate / Traducir</button>
         </form>
-        <p id="login-error" class="error"></p>
     </section>
 
-    <section id="main-section" class="hidden">
-        <h2>Dashboard operativo y asesor</h2>
-
-        <div id="cargo-form-container">
-            <h3>Registrar / Validar Carga</h3>
-            <form id="cargo-form">
-                <label>MAWB: <input type="text" name="mawb" required></label>
-                <label>HAWB: <input type="text" name="hawb"></label>
-                <label>Origen: <input type="text" name="origin" required></label>
-                <label>Destino: <input type="text" name="destination" required></label>
-                <label>Tipo de carga: 
-                    <select name="cargo_type">
-                        <option value="GEN">General</option>
-                        <option value="DG">Dangerous Goods</option>
-                        <option value="PER">Perishable</option>
-                    </select>
-                </label>
-                <label>Fecha de vuelo: <input type="date" name="flight_date" required></label>
-                <label>Peso (kg/lbs): <input type="number" step="0.01" name="weight" required></label>
-                <label>Volumen (m³): <input type="number" step="0.01" name="volume" required></label>
-                <label>Largo (cm/in): <input type="number" step="0.1" name="length" required></label>
-                <label>Ancho (cm/in): <input type="number" step="0.1" name="width" required></label>
-                <label>Alto (cm/in): <input type="number" step="0.1" name="height" required></label>
-
-                <label>Documentos (puede subir hasta 2 fotos por tipo): 
-                    <input type="file" name="files" multiple>
-                </label>
-
-                <label>Rol: 
-                    <select id="role-select">
-                        <option value="owner">Shipper</option>
-                        <option value="forwarder">Forwarder</option>
-                        <option value="driver">Driver</option>
-                        <option value="warehouse">Warehouse</option>
-                        <option value="admin">Administrador</option>
-                    </select>
-                </label>
-
-                <button type="submit">Validar</button>
-                <button type="button" id="reset-btn">Reset</button>
-                <button type="button" id="print-btn">Print/PDF</button>
-                <button type="button" id="whatsapp-btn">WhatsApp</button>
-            </form>
-        </div>
-
-        <div id="result-section">
-            <h3>Resultados de Validación</h3>
-            <div id="semaphore-display"></div>
-            <div id="documents-status"></div>
-            <div id="advisor-msg"></div>
-            <div id="legal-msg"></div>
-        </div>
+    <section id="results">
+        <h2>Validation Results</h2>
+        <div id="semaforo">Semáforo: <span id="semaforoStatus">-</span></div>
+        <div id="documentsList">Documents:</div>
+        <div id="advisor">Advisor:</div>
     </section>
 
     <script src="/static/scripts.js"></script>
